agregando pruebas automaticas